--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </aside>    
 
       <main>
-        <div class="reviw-container">
+        <div class="review-container">
           <div class="review1">
             <img class="colton"src="images\image-colton.jpg" alt="Colton Smith">
               <h3>Colton Smith</h3> 
