--- a/index.html
+++ b/index.html
@@ -33,25 +33,28 @@
         <img src="images/icon-star.svg" alt="stars" class="stars">
         <img src="images/icon-star.svg" alt="stars" class="stars">
         <img src="images/icon-star.svg" alt="stars" class="stars">
-         <p class="startext"> <strong> Rated 5 Stars in Reviews</strong>
+         <p class="startext"> <strong>Rated 5 Stars in BestTech </strong>
          </p>
         </div>
-           <div class="aside-element2">
+        <div class="aside-element_2">
+          <img src="images/icon-star.svg" alt="stars" class="stars">
+          <img src="images/icon-star.svg" alt="stars" class="stars">
+          <img src="images/icon-star.svg" alt="stars" class="stars">
+          <img src="images/icon-star.svg" alt="stars" class="stars">
+          <img src="images/icon-star.svg" alt="stars" class="stars">
+           <p class="startext"> <strong> Rated 5 Stars in Report Guru</strong>
+           </p>
+          </div>
+          <div class="aside-element_3">
             <img src="images/icon-star.svg" alt="stars" class="stars">
             <img src="images/icon-star.svg" alt="stars" class="stars">
             <img src="images/icon-star.svg" alt="stars" class="stars">
             <img src="images/icon-star.svg" alt="stars" class="stars">
             <img src="images/icon-star.svg" alt="stars" class="stars">
-            <p class="startext"> <strong> Rated 5 Stars in Report Guru</strong></p>
-           </div>
-              <div class="aside-element3">
-                <img src="images/icon-star.svg" alt="stars" class="stars">
-                <img src="images/icon-star.svg" alt="stars" class="stars">
-                <img src="images/icon-star.svg" alt="stars" class="stars">
-                <img src="images/icon-star.svg" alt="stars" class="stars">
-                <img src="images/icon-star.svg" alt="stars" class="stars">
-                <p class="startext"><strong> Rated 5 Stars in BestTech</strong></p>
-              </div>
+             <p class="startext"> <strong> Rated 5 Stars in Reviews </strong>
+             </p>
+            </div>
+           
 
     </div>
       </aside>    
@@ -68,17 +71,17 @@
           </div>
 
           <div class="review2">
-            <img class="irene-img" src="images\image-irene.jpg" alt="Irene Roberts">
-   <h3 class="irene"> Irene Roberts</h3> 
-   <p class="text-review2"><span class="span1"> Verified Buyer </span> 
+            <img class="colton" src="images\image-irene.jpg" alt="Irene Roberts">
+   <h3> Irene Roberts</h3> 
+   <p class="text-review"><span> Verified Buyer </span> 
     "Customer service is always excellent and very quick turn around. Completely
     delighted with the simplicity of the purchase and the speed of delivery."
           </div>
 
           <div class="review3">
-            <img class="irene-img" src="images\image-anne.jpg" alt="Irene Roberts">
-   <h3 class="irene">  Anne Wallace</h3> 
-   <p class="text-review2"><span class="span1"> Verified Buyer </span> 
+            <img class="colton" src="images\image-anne.jpg" alt="Irene Roberts">
+   <h3>  Anne Wallace</h3> 
+   <p class="text-review"><span> Verified Buyer </span> 
     "Put an order with this company and can only praise them for the very high
     standard. Will definitely use them again and recommend them to everyone!"
           </div>
